--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -19,6 +19,7 @@
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "net": "^1.0.2",
